# Terminal-Based-System-Monitor

./: .gitignore  CI_CD_GUIDE.md  CMakeLists.txt  QUICK_START_CI.md  README.md  vcpkg.json
.github/workflows/: ci.yml
include/: fuzzy_search.hpp  linux_monitor.hpp  macos_monitor.hpp  process_manager.hpp  system_monitor.hpp  tui.hpp
src/: fuzzy_search.cpp  linux_monitor.cpp  macos_monitor.cpp  main.cpp  process_manager.cpp  system_monitor.cpp  tui.cpp
tests/: CMakeLists.txt  test_fuzzy_search.cpp  test_process_manager.cpp  test_system_monitor.cpp
